Created functions.py and testing files, made some changes to README and Makefile

--- a/README
+++ b/README
@@ -5,4 +5,5 @@ DATE: 3/2/2021
 This is my implementation of the theater organizer for the Movie Theater 
 Seating Challenge 2020 given to me by Walmart.
 
-I first made sure I had "make" and "zip" installed in 
+I first made sure I had "make" and "zip" installed in my Linux distribution. I 
+am using Windows, so I'm running on WSL with Ubuntu.
